--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "lab2",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "webtech-ece",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node ./bin/www"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.20"
   }
-
+}
