--- a/labs/modules/04.frameworks/package.json
+++ b/labs/modules/04.frameworks/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ece-webtech-asseli-martinez",
+    "name": "webtech-ece",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -10,15 +10,15 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/walidza1/ece-webtech-Asseli-Martinez.git"
+        "url": "git+https://github.com/clement6494/webtech-ece.git"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "bugs": {
-        "url": "https://github.com/walidza1/ece-webtech-Asseli-Martinez/issues"
+        "url": "https://github.com/clement6494/webtech-ece/issues"
     },
-    "homepage": "https://github.com/walidza1/ece-webtech-Asseli-Martinez#readme",
+    "homepage": "https://github.com/clement6494/webtech-ece#readme",
     "dependencies": {
         "express": "^4.18.2",
         "nodemon": "^2.0.20"
