--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "all": "^0.0.0"
   },
   "name": "webtech-ece",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
@@ -20,5 +20,6 @@
     "url": "https://github.com/clement6494/webtech-ece/issues"
   },
   "homepage": "https://github.com/clement6494/webtech-ece#readme",
-  "description": ""
+  "description": "*presentation, introduction, ...*"
+
 }
