--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
     "markdown-it": "^13.0.1",
-    "next": "13.0.5",
+    "next": "^13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss-font-inter": "^3.0.1"
