--- a/labs/lab9/app/package.json
+++ b/labs/lab9/app/package.json
@@ -13,11 +13,11 @@
     "@supabase/auth-helpers-nextjs": "^0.5.2",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/auth-ui-react": "^0.2.6",
-    "@supabase/supabase-js": "^2.1.1",
+    "@supabase/supabase-js": "^2.2.1",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
     "markdown-it": "^13.0.1",
-    "next": "13.0.5",
+    "next": "^13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss-font-inter": "^3.0.1"
