--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
   "dependencies": {
-    "all": "^0.0.0"
+    "@supabase/supabase-js": "^2.2.2",
+    "@supabase/ui": "^0.36.5",
+    "@tailwindcss/typography": "^0.5.8",
+    "all": "^0.0.0",
+    "autoprefixer": "^10.4.13",
+    "easymde": "^2.18.0",
+    "postcss": "^8.4.20",
+    "react-markdown": "^8.0.4",
+    "react-simplemde-editor": "^5.2.0",
+    "tailwindcss": "^3.2.4",
+    "uuid": "^9.0.0"
   },
   "name": "webtech-ece",
   "version": "1.1.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,5 +30,4 @@
   },
   "homepage": "https://github.com/clement6494/webtech-ece#readme",
   "description": "*presentation, introduction, ...*"
-
 }
