--- a/app/package.json
+++ b/app/package.json
@@ -13,9 +13,14 @@
     "@supabase/supabase-js": "^2.2.2",
     "@supabase/ui": "^0.36.5",
     "@tailwindcss/typography": "^0.5.8",
+    "@supabase/auth-helpers-nextjs": "^0.5.2",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/auth-ui-react": "^0.2.6",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@heroicons/react": "^2.0.13",
     "autoprefixer": "^10.4.13",
     "easymde": "^2.18.0",
     "eslint": "8.30.0",
@@ -25,9 +30,19 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.4",
+    "markdown-it": "^13.0.1",
     "react-simplemde-editor": "^5.2.0",
     "tailwindcss": "^3.2.4",
+    "tailwindcss-font-inter": "^3.0.1",
     "typescript": "4.9.4",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "eslint": "8.28.0",
+    "eslint-config-next": "13.0.5",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
+
 }
