--- a/app/package.json
+++ b/app/package.json
@@ -9,28 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.2.2",
-    "@tailwindcss/typography": "^0.5.8",
+    "@heroicons/react": "^2.0.13",
     "@supabase/auth-helpers-nextjs": "^0.5.2",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/auth-ui-react": "^0.2.6",
+    "@supabase/supabase-js": "^2.2.2",
     "@tailwindcss/forms": "^0.5.3",
-    "@heroicons/react": "^2.0.13",
+    "@tailwindcss/typography": "^0.5.8",
     "easymde": "^2.18.0",
+    "markdown-it": "^13.0.1",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.4",
-    "markdown-it": "^13.0.1",
     "react-simplemde-editor": "^5.2.0",
+    "swiper": "^8.4.5",
     "tailwindcss-font-inter": "^3.0.1"
   },
   "devDependencies": {
+    "@types/node": "18.11.18",
     "autoprefixer": "^10.4.13",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
   }
-
 }
