--- a/app/package.json
+++ b/app/package.json
@@ -23,7 +23,8 @@
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.4",
     "react-simplemde-editor": "^5.2.0",
-    "tailwindcss-font-inter": "^3.0.1"
+    "tailwindcss-font-inter": "^3.0.1",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
