--- a/app/package.json
+++ b/app/package.json
@@ -23,10 +23,11 @@
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.4",
     "react-simplemde-editor": "^5.2.0",
-    "tailwindcss-font-inter": "^3.0.1",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "tailwindcss-font-inter": "^3.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/node": "18.11.18",
     "autoprefixer": "^10.4.13",
     "eslint": "8.28.0",
